<resources>
    <string name="app_name">2Learn</string>
    <string name="app_logo">Logo</string>

    <!-- Login string  -->
    <string name="user_name">User name</string>
    <string name="email_login">userName@gmail.com</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="hint">********</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_with_facebook">Sign up facebook</string>
    <string name="forget_password">Forgot your password ?</string>

    <!-- Register form string  -->
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone_number_form">Phone Number (optional)</string>
    <string name="academic_institution_form">Academic Institution (optional)</string>
    <string name="register">Register</string>



    <!-- Profile string  -->
    <string name="user_image_content">User image picture</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="askHelpList">Ask Help</string>
    <string name="offerHelpList">Offer Help</string>
    <string name="phone_number">Phone Number</string>

    <string name="offer_help_in_that_Course">Offer help in that course</string>

    <string name="ask_help_in_that_Course">Ask help in that course</string>


    <string name="description">
        Add new courses to your list
    </string>
    <!-- Drawer menu   -->
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="my_matches">My matches</string>
    <string name="proficiency">My proficiency</string>
    <string name="add_proficiency">Add Proficiency</string>
    <string name="log_out">Log out</string>

    <!-- Home String   -->
    <string name="ok">OK</string>
    <string name="come_back_in_another_time">I\'\ll be back in another time</string>

    <string-array name="institution">

        <item>Afeka- Tel-Aviv Academic College Of Engineering</item>
        <item>Tel-Aviv University</item>
        <item>HIT- Holon Institute Of Technology</item>
        <item>Ruppin Academic Center</item>
        <item>Bar-Ilan University</item>
    </string-array>

    <string-array name="courses">

        <item>Introduction to computer science</item>
        <item>Linear Algebra</item>
        <item>Computer architecture</item>
        <item>Discrete mathematics</item>
        <item>Operating system</item>
        <item>Data Structure</item>
        <item>Algorithm</item>
        <item>Computer design</item>
    </string-array>

    <string name="edit_user_name">User name</string>
    <string name="edit_phone_number">Phone number</string>
    <string name="edit_facebook_url">Facebook</string>
    <string name="edit_twitter_url">Twitter</string>
    <string name="edit_linkedin_url">Linkedin</string>
    <string name="setting">Setting</string>
    <string name="hint_facebook">https://www.facebook.com</string>
    <string name="hint_twitter">https://www.twitter.com/</string>
    <string name="hint_linkedin">https://www.linkedin.com</string>
    <string name="display_your_phone_number">Display your phone number</string>
    <string name="display_your_email">Display your Email</string>
    <string name="display_your_date_of_birth">Display your date of birth</string>
    <string name="profile_visibility">Profile visibility</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="chat">Chat</string>
    <string name="match">Match</string>
    <string name="type_a_message">Type a message…</string>
    <string name="about">About</string>
    <string name="no_details">no_details</string>
    <string name="ask_help_in">Ask Help In :</string>
    <string name="offer_help_in">Offer Help In :</string>

    <string name="searching">Searching for new students</string>
    <string name="proficiency_description">Upgrade your skills to help yourself find the best match for you.
        \nAfter searching the relevant course you can add the course by pressing the add icon, or removing course by pressing on the remove button.
        \nYou can view those courses in your profile.
    </string>
    <string name="upgrade_your_skills">Upgrade your skills</string>
    <string name="information">Information</string>
    <string name="search_course">Search course</string>
    <string name="rate_me">Rate me</string>


    <!--    -->
    <string name="user_id">userId</string>


    <!-- Error in the application   -->

    <!-- Used in Login Activity -->
    <string name="sign_in_error">Sign in failed, forget your password?</string>
    <string name="invalid_email_format">Invalid email format, Please try again</string>
    <string name="invalid_password_login">Invalid password, did you forget your password? </string>

    <!-- Used in Form Activity    -->

    <string name="invalid_name_form">Invalid name format, type your name separated by space and your last name </string>
    <string name="invalid_email_form">Invalid format of email</string>
    <string name="invalid_password_form">Password must be at least 8 letter long.\n It should include big letter, small letter, digit and special character. </string>
    <string name="invalid_confirm_password_form">Password don\'t match</string>
    <string name="register_failed">Registration failed</string>


    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="facebook">https://www.facebook.com</string>
    <string name="twitter">https://www.twitter.com</string>
    <string name="linkedin">https://www.linkedin.com</string>
    <string name="addButton">Add button</string>
    <string name="removeButton">Remove button</string>
    <string name="you_have_match">You have a match with</string>
    <string name="camera_provider">com.example.a2learn.fileprovider</string>
    <string name="your_match_list">Your match list</string>
    <string name="empty_list">Your don\'\t have matches yet !</string>
    <string name="twitter_input_error">Not valid twitter url</string>
    <string name="facebook_input_error">Not valid facebook url</string>
    <string name="linkedin_input_error">Not valid linkedin url</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="match_title">It\'\s A Match!</string>
    <string name="student_searching_failed">Sorry no new students were found!</string>
    <string name="application_description">application description</string>
    <string name="about_us">2Learn® is the world\'s most popular social&#8211;learning app for new and random people,
        with 30 billion matches. We are like your most reliable platform
        for catching up your needs. If you come to meet new people,
        expand your social network, learn together, find and give help,
        meet others, or maybe just live the moment &#8211; you\'ve come to the right place.
        We don\'t just call ourselves the &quot;smartest app in the world&quot; : we see it on every time someone using our app and tell us, and it\'s just get bigger.
        How many social &#8211; learning apps do you know ?
</string>
    <string name="credits">©Gil Glick,Jonathan Karta, Perry Shalom</string>
</resources>

