<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/login_gradient_background" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="200dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_gradient_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/password"
            android:hint="@string/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/signIn"
            android:textColor="#FFF"
            android:background="@drawable/sign_in_up_button_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/signUp"
            android:textColor="#FFF"
            android:background="@drawable/sign_in_up_button_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/facebookSignUp"
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:background="@drawable/sign_up_facebook_button_gradient"
            android:textAllCaps="false"
            android:text="@string/sign_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/login_gradient_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <TextView
        android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageVIew"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="12sp"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layoutInput"
        android:text="@string/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>