<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/application_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:text="@string/application_description"/>

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="280dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="14sp"
        android:text="@string/about_us" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutUsText"
        android:layout_centerHorizontal="true"
        android:text="@string/credits"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-light" />

</RelativeLayout>